had to git clone again

--- a/package.json
+++ b/package.json
@@ -49,5 +49,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/Sunghnkim95/McLovins-Frontend/issues"
+  },
+  "homepage": "https://github.com/Sunghnkim95/McLovins-Frontend#readme"
 }
