--- a/package.json
+++ b/package.json
@@ -22,8 +22,6 @@
     "@mui/icons-material": "^5.0.3",
     "@mui/material": "^5.0.3",
     "@mui/styled-engine-sc": "^5.0.3",
-    "styled-components": "^5.3.1",
-    "node-sass": "^6.0.1",
     "axios": "^0.23.0",
     "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
@@ -32,11 +30,14 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "node": "^16.10.0",
+    "node-sass": "^6.0.1",
+    "nodemon": "^2.0.14",
     "pg": "^8.7.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "^4.0.3"
+    "react-scripts": "^4.0.3",
+    "styled-components": "^5.3.1"
   },
   "browserslist": {
     "production": [
